[package]
name = "resolve_macro"
version = "0.1.0"
authors = ["Igor Bykov <con29rus@live.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
# syn = "0.15.42"
quote = "0.6.13"

[dependencies.syn]
version = "0.15.42"
features = ["full"]
